2008-06-22  Thijs Vermeir  <thijsvermeir@gmail.com>

	* plugins/elements/gstmultiqueue.c:
	Add functionality to extra-size-buffers property.

2008-06-22  Thijs Vermeir  <thijsvermeir@gmail.com>

	* plugins/elements/gstmultiqueue.c:
	Don't update the cur_time on GST_CLOCK_TIME_NONE (#537804) and don't
	activate the pads if they are added in STATE_NULL.

2008-06-21  Thijs Vermeir  <thijsvermeir@gmail.com>

	* docs/libs/gstreamer-libs-sections.txt:
	Add new API to doc
	* libs/gst/check/gstcheck.c:
	* libs/gst/check/gstcheck.h:
	API: gst_check_teardown_pad_by_name

2008-06-21  Thijs Vermeir  <thijsvermeir@gmail.com>

	* libs/gst/check/gstcheck.c:
	* libs/gst/check/gstcheck.h:
	Also setup request pads and allow setup pads by name (#537812)
	API: gst_check_setup_src_pad_by_name
	API: gst_check_setup_sink_pad_by_name

2008-06-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* tests/check/gst/gstbuffer.c:
	* tests/check/pipelines/parse-launch.c:
	  Use HAVE_VALGRIND_H some more.

2008-06-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* scripts/cvs-update.sh:
	  Pass arguments to make.
	  Run autoregen.sh if Makefile is not there.

2008-06-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	* gst/gstinfo.c:
	  Don't assume that <valgrind/valgrind.h> exists just because
	  the binary is there.

2008-06-20  Wim Taymans  <wim.taymans@collabora.co.uk>

	* tests/check/Makefile.am:
	* tests/check/libs/test_transform.c: (gst_test_trans_base_init),
	(gst_test_trans_class_init), (gst_test_trans_init),
	(gst_test_trans_set_data), (result_sink_chain),
	(gst_test_trans_new), (gst_test_trans_free), (gst_test_trans_push),
	(gst_test_trans_pop):
	* tests/check/libs/transform1.c: (GST_START_TEST),
	(transform_ip_1), (set_caps_1), (gst_basetransform_suite):
	Add some test basetransform element and the beginnings of various
	unit tests for it.

2008-06-20  Wim Taymans  <wim.taymans@collabora.co.uk>
