@@ -1,3 +1,9 @@
+2008-06-24  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
+
+	* tests/check/gst/gstghostpad.c: (GST_START_TEST):
+	Fix some memory leaks and uses of object instances that we don't
+	actually own.
+
 2008-06-22  Thijs Vermeir  <thijsvermeir@gmail.com>
 
 	* plugins/elements/gstmultiqueue.c:
